# Knowledge-based_Meme_Caption_Generator

./: .gitignore  README.md  pyproject.toml
src/: build_KGEmbed.py  build_vocab.py  data_loader.py  model.py  resize.py  sample.py  scrapying.py  tokenizer.py  train.py
tests/: test_data_loader.py  test_ssd.py  test_tokenizer.py
